# cmake_test

./: CMakeLists.txt  conanfile.txt  readme.md
.github/workflows/: cmake.yaml
cmake/: test.cmake
example/: CMakeLists.txt  HelloWorld.cpp
src/: CMakeLists.txt
src/add/: MyAdd.cpp  MyAdd.hpp
src/print/: MyPrint.cpp  MyPrint.hpp
test/: CMakeLists.txt  TestAdd.cpp  TestMain.cpp  TestString  TestString.cpp
